<resources>
    <string name="app_name">WeatherEdu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ivan D</string>
    <string name="nav_header_subtitle">div-3@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_Show_item">Show City…</string>
    <string name="nav_drawer_Add_item">Add City</string>
    <string name="nav_drawer_All_Cities_item">All Cities</string>
    <string name="nav_drawer_Settings_item">Settings</string>
    <string name="nav_drawer_Share_item">Share</string>
    <string name="main_choose">Choose your City…</string>
    <string name="city">City</string>
    <string name="temperature_default">-</string>
    <string name="temperature_unit"> \u00B0C</string>
    <string name="pressure_tag">Pressure: </string>
    <string name="pressure_default">-</string>
    <string name="pressure_unit">hPa</string>
    <string name="humidity_tag">Humidity:</string>
    <string name="humidity_default">-</string>
    <string name="humidity_unit">%</string>
    <string name="wind_tag">Wind:</string>
    <string name="wind_default">-</string>
    <string name="wind_unit">m/s</string>
    <string name="place_not_found">Place not found!</string>
    <string name="choose_your_city">Choose City...</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_ok">Ok</string>
    <string name="bnt_cancel">Cancel</string>
</resources>
