<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_show_city"
            android:title="@string/nav_drawer_Show_item" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add_city"
            android:title="@string/nav_drawer_Add_item" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_all_cities"
            android:title="@string/nav_drawer_All_Cities_item" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_drawer_Settings_item" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="nav_drawer_Share_item" />
        </menu>
    </item>

</menu>
